force-app/main/default/objects/Opportunity/fields/Anos_cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Anos_cotizacion__c</fullName>
    <formula>Edad_Retiro__c -  Edad_Actual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Años cotización</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>