force-app/main/default/objects/Opportunity/fields/Aporte_Extraordinario__c.field-meta.xml
<CustomField>
    <fullName>Aporte_Extraordinario__c</fullName>
    <label>Aporte Extraordinario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>