force-app/main/default/objects/Opportunity/fields/Aporte_Inicial__c.field-meta.xml
<CustomField>
    <fullName>Aporte_Inicial__c</fullName>
    <label>Aporte Inicial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>