force-app/main/default/objects/Opportunity/fields/Codigo_Cuenta_Colectiva__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Cuenta_Colectiva__c</fullName>
    <label>Código Cuenta Colectiva</label>
    <length>45</length>
    <type>Text</type>
</CustomField>