force-app/main/default/objects/Opportunity/fields/Comision_Administracion_Anual__c.field-meta.xml
<CustomField>
    <fullName>Comision_Administracion_Anual__c</fullName>
    <defaultValue>0.02</defaultValue>
    <label>Comisión Administración Anual</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>