force-app/main/default/objects/Opportunity/fields/Comision_Aporte__c.field-meta.xml
<CustomField>
    <fullName>Comision_Aporte__c</fullName>
    <defaultValue>0.05</defaultValue>
    <label>Comisión Aporte</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>