force-app/main/default/objects/Opportunity/fields/Debito_cuenta_bancaria__c.field-meta.xml
<CustomField>
    <fullName>Debito_cuenta_bancaria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Débito a cuenta bancaria</label>
    <type>Checkbox</type>
</CustomField>