force-app/main/default/objects/Opportunity/fields/Debito_Directo__c.field-meta.xml
<CustomField>
    <fullName>Debito_Directo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debito Directo</label>
    <type>Checkbox</type>
</CustomField>