force-app/main/default/objects/Opportunity/fields/Edad_Actual__c.field-meta.xml
<CustomField>
    <fullName>Edad_Actual__c</fullName>
    <label>Edad Actual</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>