force-app/main/default/objects/Opportunity/fields/Edad_Retiro__c.field-meta.xml
<CustomField>
    <fullName>Edad_Retiro__c</fullName>
    <label>Edad Retiro</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>