force-app/main/default/objects/Opportunity/fields/Fecha_Aporte_Credito__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Aporte_Credito__c</fullName>
    <label>Fecha de Aporte Crédito</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>