force-app/main/default/objects/Opportunity/fields/Fecha_Aporte_Debito__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Aporte_Debito__c</fullName>
    <label>Fecha de Aporte Débito</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>