force-app/main/default/objects/Opportunity/fields/Fecha_incorporacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_incorporacion__c</fullName>
    <label>Fecha de incorporación</label>
    <type>Date</type>
</CustomField>