force-app/main/default/objects/Opportunity/fields/Frecuencia_Pago__c.field-meta.xml
<CustomField>
    <fullName>Frecuencia_Pago__c</fullName>
    <label>Frecuencia Pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anual</fullName>
            </value>
            <value>
                <fullName>Bimensual</fullName>
            </value>
            <value>
                <fullName>Mensual</fullName>
            </value>
            <value>
                <fullName>Semanal</fullName>
            </value>
            <value>
                <fullName>Semestre</fullName>
            </value>
            <value>
                <fullName>Trimestral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>