force-app/main/default/objects/Opportunity/fields/Maximo_Asegurado__c.field-meta.xml
<CustomField>
    <fullName>Maximo_Asegurado__c</fullName>
    <label>Maximo Asegurado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>