force-app/main/default/objects/Opportunity/fields/Metodo_Pago__c.field-meta.xml
<CustomField>
    <fullName>Metodo_Pago__c</fullName>
    <label>Convenio Pago</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Debito_Directo__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
                <default>true</default>
                <label>Cheque</label>
            </value>
            <value>
                <fullName>Credito</fullName>
            </value>
            <value>
                <fullName>Debito</fullName>
            </value>
            <value>
                <fullName>Efectivo</fullName>
            </value>
            <value>
                <fullName>Nomina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>