force-app/main/default/objects/Opportunity/fields/Monto_Planilla_Mensual__c.field-meta.xml
<CustomField>
    <fullName>Monto_Planilla_Mensual__c</fullName>
    <label>Monto Planilla Mensual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>