force-app/main/default/objects/Opportunity/fields/Numero_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Numero_Cuenta__c</fullName>
    <label>Numero Cuenta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>