force-app/main/default/objects/Opportunity/fields/Numero_Empleado_Suscribir__c.field-meta.xml
<CustomField>
    <fullName>Numero_Empleado_Suscribir__c</fullName>
    <label>Numero Empleado a Suscribir</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>