force-app/main/default/objects/Opportunity/fields/Numero_Empleado_Total__c.field-meta.xml
<CustomField>
    <fullName>Numero_Empleado_Total__c</fullName>
    <formula>Account.NumberOfEmployees</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero Empleado Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>