force-app/main/default/objects/Opportunity/fields/Numero_Formulario__c.field-meta.xml
<CustomField>
    <fullName>Numero_Formulario__c</fullName>
    <description>SF{0000000000}</description>
    <displayFormat>SF{0000000000}</displayFormat>
    <inlineHelpText>SF{0000000000}</inlineHelpText>
    <label>Numero Formulario</label>
    <type>AutoNumber</type>
</CustomField>