force-app/main/default/objects/Opportunity/fields/Numero_tarjeta__c.field-meta.xml
<CustomField>
    <fullName>Numero_tarjeta__c</fullName>
    <label>Número de tarjeta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>