force-app/main/default/objects/Opportunity/fields/Pension__c.field-meta.xml
<CustomField>
    <fullName>Pension__c</fullName>
    <formula>Amount  +  Aporte_Extraordinario__c + Aporte_Inicial__c /  (Anos_cotizacion__c / 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pension</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>