force-app/main/default/objects/Opportunity/fields/Porcentaje_Empleado__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Empleado__c</fullName>
    <label>% Cotización Empleado</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>