force-app/main/default/objects/Opportunity/fields/Porcentaje_Empleador__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Empleador__c</fullName>
    <label>% Cotización Empleador</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>