force-app/main/default/objects/Opportunity/fields/porcentaje_Salario_aporte_empleador__c.field-meta.xml
<CustomField>
    <fullName>porcentaje_Salario_aporte_empleador__c</fullName>
    <label>% Salario aporte empleador</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>