force-app/main/default/objects/Opportunity/fields/Porcentaje_Salario_aporte_trabajador__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Salario_aporte_trabajador__c</fullName>
    <label>% Salario aporte trabajador</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>