force-app/main/default/objects/Opportunity/fields/Promedio_Salario_Empleado__c.field-meta.xml
<CustomField>
    <fullName>Promedio_Salario_Empleado__c</fullName>
    <formula>Monto_Planilla_Mensual__c /  Numero_Empleado_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promedio Salario Por Empleado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>