force-app/main/default/objects/Opportunity/fields/Salario_Mensual__c.field-meta.xml
<CustomField>
    <fullName>Salario_Mensual__c</fullName>
    <label>Salario Mensual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>