force-app/main/default/objects/Opportunity/fields/Seguro__c.field-meta.xml
<CustomField>
    <fullName>Seguro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seguro</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Seguro__c.CurrencyIsoCode</field>
            <operation>equals</operation>
            <valueField>$Source.CurrencyIsoCode</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Seguro__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>