force-app/main/default/objects/Opportunity/fields/Tarjeta_Credito__c.field-meta.xml
<CustomField>
    <fullName>Tarjeta_Credito__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tarjeta de Crédito</label>
    <type>Checkbox</type>
</CustomField>