force-app/main/default/objects/Opportunity/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TALONARIO</fullName>
            </value>
            <value>
                <fullName>DEDUCCIÓN POR PLANILLA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>