force-app/main/default/objects/Opportunity/fields/Tipo_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Cuenta__c</fullName>
    <label>Tipo de Cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AHORRO</fullName>
                <default>true</default>
                <label>AHORRO</label>
            </value>
            <value>
                <fullName>CHEQUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>