force-app/main/default/objects/Opportunity/fields/Tipo_fondo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_fondo__c</fullName>
    <label>Tipo de fondo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fondo de pensión</fullName>
            </value>
            <value>
                <fullName>Fondo de cesantía</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>