force-app/main/default/objects/Opportunity/fields/Tipo_moneda__c.field-meta.xml
<CustomField>
    <fullName>Tipo_moneda__c</fullName>
    <label>Tipo de moneda</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>En Lempiras</fullName>
            </value>
            <value>
                <fullName>En Dólares</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>