force-app/main/default/objects/Opportunity/fields/Valor_Seguro_Mensual__c.field-meta.xml
<CustomField>
    <fullName>Valor_Seguro_Mensual__c</fullName>
    <formula>Seguro__r.Prima_Mensual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Seguro Mensual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>