force-app/main/default/objects/Opportunity/recordTypes/Juridico.recordType-meta.xml
<RecordType>
    <fullName>Juridico</fullName>
    <active>true</active>
    <businessProcess>FPC Ficohsa</businessProcess>
    <label>Juridico</label>
</RecordType>