force-app/main/default/objects/Opportunity/recordTypes/Natural.recordType-meta.xml
<RecordType>
    <fullName>Natural</fullName>
    <active>true</active>
    <businessProcess>FPC Ficohsa</businessProcess>
    <label>Natural</label>
</RecordType>